--- a/index.html
+++ b/index.html
@@ -10,130 +10,192 @@
     <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-    <header class="site-header inicio">
-        <div class="contenedor contenido-header">
-            <div class="barra">
-                <a href="/">
-                    <img src="img/logo.svg" alt="Logotipo de Bienes Raíces">
-                </a>     
-                <nav class="navegacion">
-                    <a href="nosotros.html">Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a> 
-                    <a href="contactos.html">Contacto</a>
-                </nav>
-            </div> <!--BARRA-->
-                <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
-        </div> <!--CONTENEDOR-->
-    </header>
+<header class="site-header inicio">
+    <div class="contenedor contenido-header">
+        <div class="barra">
+            <a href="/">
+                <img src="img/logo.svg" alt="Logotipo de Bienes Raíces">
+            </a>     
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a> 
+                <a href="contactos.html">Contacto</a>
+            </nav>
+        </div> <!--BARRA-->
+            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+    </div> <!--CONTENEDOR-->
+</header>
 
-    <section class="contenedor">
+<section class="contenedor">
 
-        <h2 class="fw-300 centrar-texto">Más sobre nosotros</h2>
+    <h2 class="fw-300 centrar-texto">Más sobre nosotros</h2>
 
-        <div class="iconos-nosotros">
-            <div class="icono">
-                <img src="img/icono1.svg" alt="Icono Seguridad">
-                <h3>Seguridad</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptate nihil quidem earum repudiandae sapiente deleniti tempore eaque temporibus, architecto praesentium, ea saepe modi neque corrupti. Vitae, asperiores? Cum, in.</p>
+    <div class="iconos-nosotros">
+        <div class="icono">
+            <img src="img/icono1.svg" alt="Icono Seguridad">
+            <h3>Seguridad</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptate nihil quidem earum repudiandae sapiente deleniti tempore eaque temporibus, architecto praesentium, ea saepe modi neque corrupti. Vitae, asperiores? Cum, in.</p>
+        </div>
+
+        <div class="icono">
+            <img src="img/icono2.svg" alt="Icono Mejor Precio">
+            <h3>El Mejor Precio</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique eius unde facilis recusandae quis adipisci repudiandae accusamus tenetur in, expedita nihil a quae fugit corrupti ad eligendi sit? Cum, quo.</p>
+        </div>
+
+        <div class="icono">
+            <img src="img/icono3.svg" alt="Icono A Tiempo">
+            <h3>A Tiempo</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique eius unde facilis recusandae quis adipisci repudiandae accusamus tenetur in, expedita nihil a quae fugit corrupti ad eligendi sit? Cum, quo.</p>
+        </div>
+    </div>
+</section>
+
+<section>
+    <main class="seccion contenedor">
+        <h2 class="fw-300 centrar-texto">Casas y Departamentos en Venta</h2>
+
+        <div class="contenedor-anuncios">
+
+            <div class="anuncio">
+                <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
+                <div class="contenido-anuncio">
+                    <h3>Casa de Lujo en Lago</h3>
+                    <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
+                    <p class="precio">$ 3,000,0000</p>
+                    <ul class="iconos-caracteristicas">
+                        <li>
+                            <img src="img/icono_wc.svg" alt="icono wc">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_estacionamiento.svg" alt="icono auto">
+                            <p>3</p>
+                        </li>
+                        <li>
+                            <img src="img/icono_dormitorio.svg" alt="icono cama">
+                            <p>4</p>
+                        </li>                  
+                    </ul>
+           
+                    <a href="#" class="boton boton-amarillo d-block ">Ver propiedad</a>
+                </div> 
             </div>
 
-            <div class="icono">
-                <img src="img/icono2.svg" alt="Icono Mejor Precio">
-                <h3>El Mejor Precio</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique eius unde facilis recusandae quis adipisci repudiandae accusamus tenetur in, expedita nihil a quae fugit corrupti ad eligendi sit? Cum, quo.</p>
+            <div class="anuncio">
+                <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
+                <div class="contenido-anuncio">
+                    <h3>Casa Terminados de Lujo</h3>
+                    <p>Csa con diseño moderno, así como tecnología inteligente y amueblada</p>
+                    <p class="precio">$ 2,000,0000</p>
+                    <ul class="iconos-caracteristicas">
+                            <li>
+                                <img src="img/icono_wc.svg" alt="icono wc">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img src="img/icono_estacionamiento.svg" alt="icono auto">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img src="img/icono_dormitorio.svg" alt="icono cama">
+                                <p>4</p>
+                            </li>                  
+                        </ul>
+                    <a href="#" class="boton boton-amarillo d-block ">Ver propiedad</a>
+                </div> 
             </div>
 
-            <div class="icono">
-                <img src="img/icono3.svg" alt="Icono A Tiempo">
-                <h3>A Tiempo</h3>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique eius unde facilis recusandae quis adipisci repudiandae accusamus tenetur in, expedita nihil a quae fugit corrupti ad eligendi sit? Cum, quo.</p>
+            <div class="anuncio">
+                <img src="img/anuncio3.jpg" alt="Anuncio casa con alberca">
+                <div class="contenido-anuncio">
+                    <h3>Casa con Alberca</h3>
+                    <p>Casa con alberca, acabados de lujo en la ciudad, excelente oportunidad</p>
+                    <p class="precio">$ 3,000,0000</p>
+                    <ul class="iconos-caracteristicas">
+                            <li>
+                                <img src="img/icono_wc.svg" alt="icono wc">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img src="img/icono_estacionamiento.svg" alt="icono auto">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img src="img/icono_dormitorio.svg" alt="icono cama">
+                                <p>4</p>
+                            </li>                  
+                        </ul>
+                    <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+                </div>    
             </div>
+        </div> 
+        <div class="ver-todas">
+            <a href="anuncios.html" class="boton boton-verde">Ver Todas</a>
+        </div>
+    </main>
+</section>
+
+<section class="imagen-contacto">
+    <div class="contenedor contenido-contacto">
+        <h2>Encuentra la casa de tus sueños</h2>
+        <p>Llena el formulario de contacto y un asesor se pondrá en contacto a la brevedad</p>
+        <a href="contacto.html" class="boton boton-amarillo">Contáctanos</a>
+    </div>
+</section>
+
+<div class="seccion-inferior contenedor seccion">
+    <section class="blog">
+        <h3 class="centrar-texto fw-300">Nuestro bog</h3>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <img src="img/blog1.jpg" alt="Entrada de blog">
+            </div>
+            <div class="texto-entrada">
+                <a href="#">
+                    <h4>Terraza en el techo de tu casa</h4>
+                </a>
+                <p>Escrito el: <span>25/05/2019</span> por:<span> Admin</span> </p>
+                <p>Consejos para construir una terraza en el techo de tu casa</p>
+            </div>
+        </article>
+
+        <article class="entrada-blog">
+            <div class="imagen">
+                <img src="img/blog2.jpg" alt="Entrada de blog">
+            </div>
+            <div class="texto-entrada">
+                <a href="#">
+                    <h4>Guía para la decoración de tu hogar</h4>
+                </a>
+                <p>Escrito el: <span>25/05/2019</span> por:<span> Admin</span> </p>    
+                <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
+            </div>
+        </article>
+    </section>
+
+    <section class="testimoniales">
+        <h3 class="centrar-texto fw-300">Testimoniales</h3>
+        <div class="testimonial">
+            <blockquote>
+                El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas
+            </blockquote>
+            <p>- Juan de la Torre</p>
         </div>
     </section>
-
-    <section>
-        <main class="seccion contenedor">
-            <h2 class="fw-300 centrar-texto">Casas y Departamentos en Venta</h2>
-
-            <div class="contenedor-anuncios">
-
-                <div class="anuncio">
-                    <img src="img/anuncio1.jpg" alt="Anuncio casa en el lago">
-                    <div class="contenidp-anuncio"></div>
-                        <h3>Casa de Lujo en Lago</h3>
-                        <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                        <p>$ 3,000,0000</p>
-                        <a href="#">Ver propiedad</a>
-                    </div> 
-                </div>
-
-                <div class="anuncio">
-                     <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
-                     <div class="contenidp-anuncio">
-                        <h3>Casa Terminados de Lujo</h3>
-                        <p>Csa con diseño moderno, así como tecnología inteligente y amueblada</p>
-                        <p>$ 2,000,0000</p>
-                        <a href="#">Ver propiedad</a>
-                    </div> 
-                </div>
-
-                <div class="anuncio">
-                    <img src="img/anuncio3.jpg" alt="Anuncio casa con alberca">
-                    <div class="contenidp-anuncio"></div>
-                        <h3>Casa con Alberca</h3>
-                        <p>Casa con alberca, acabados de lujo en la ciudad, excelente oportunidad</p>
-                        <p>$ 3,000,0000</p>
-                        <a href="#">Ver propiedad</a>
-                    </div>    
-                </div>
-            </div>
-
-            <a href="anuncios.html">Ver Todas</a>
-        </main>
-    </section>
-
-    <section>
-        <h2>Encuentra la casa d etus sueños</h2>
-        <p>Llena el formulario de contacto y un asesor se pondrá en contacto a la brevedad</p>
-        <a href="contacto.html">Contáctanos</a>
-    </section>
-
-    <section>
-        <h3>Nuestro bog</h3>
-        <article>
-            <img src="img/blog1.jpg" alt="Entrada de blog">
-            <h4>Terraza en el techo de tu casa</h4>
-            <p>Escrito el: <em>25/05/2019</em> <em> por:</em> <em> Admin</em> </p>
-            <p>Consejos para construir una terraza en el techo de tu casa</p>
-        </article>
-
-        <article>
-             <img src="img/blog2.jpg" alt="Entrada de blog">
-            <h4>Guía para la decoración de tu hogar</h4>
-            <p>Escrito el: <em>25/05/2019</em> <em> por:</em> <em> Admin</em> </p>
-            <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
-        </article>
-    </section>
-
-    <section>
-        <h3>Testimoniales</h3>
-        <blockquote>
-            El personal se comportó de una excelente forma, muy buena atención y la casa que me ofrecieron cumple con todas mis expectativas
-        </blockquote>
-        <p>- Juan de la Torre</p>
-    </section>
-
-    <footer>
+</div>
+<footer class="site-footer seccion">
+    <div class="contenedor contenedor-footer">
         <nav class="navegacion">
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a> 
             <a href="contactos.html">Contacto</a>
         </nav>
-
-        <p>Todos los derechos reservados 2019 &copy;</p>
-
-    </footer>    
+        <p class="copyright">Todos los derechos reservados 2019 &copy;</p>
+    </div>
+</footer>    
 </body>
 </html>
