--- a/nosotros.html
+++ b/nosotros.html
@@ -4,12 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nosotros</title>
+    <title>Bienes Raíces</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
+<header class="site-header">
+    <div class="contenedor contenido-header">
+        <div class="barra">
+            <a href="/">
+                <img src="img/logo.svg" alt="Logotipo de Bienes Raíces">
+            </a>     
+            <nav class="navegacion">
+                <a href="nosotros.html">Nosotros</a>
+                <a href="anuncios.html">Anuncios</a>
+                <a href="blog.html">Blog</a> 
+                <a href="contactos.html">Contacto</a>
+            </nav>
+        </div> <!--BARRA-->
 
-    <h1>Nosotros</h1>
-    <a href="index.html">Volver</a>
+    </div> <!--CONTENEDOR-->
+</header>
+
+<main class="contenedor">
+    <h1 class="fw-300 centrar-texto">Conoce Sobre Nosotros</h1>
+    <div class="contenido-nosotros">
+        <div class="imagen">
+            <img src="img/nosotros.jpg" alt="imagen sobre nosotros">
+        </div>
+        <div class="texto-nosotros">
+            <blockquote>25 Años de Experiencia</blockquote>
+            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.</p>
+            <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</p>
+        </div>
+    </div>
+</main>
+
+<section class="contenedor">
+    <h2 class="fw-300 centrar-texto">Más sobre nosotros</h2>
+    <div class="iconos-nosotros">
+        <div class="icono">
+            <img src="img/icono1.svg" alt="Icono Seguridad">
+            <h3>Seguridad</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus voluptate nihil quidem earum repudiandae sapiente deleniti tempore eaque temporibus, architecto praesentium, ea saepe modi neque corrupti. Vitae, asperiores? Cum, in.</p>
+        </div>
     
+        <div class="icono">
+            <img src="img/icono2.svg" alt="Icono Mejor Precio">
+            <h3>El Mejor Precio</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique eius unde facilis recusandae quis adipisci repudiandae accusamus tenetur in, expedita nihil a quae fugit corrupti ad eligendi sit? Cum, quo.</p>
+        </div>
+    
+        <div class="icono">
+            <img src="img/icono3.svg" alt="Icono A Tiempo">
+            <h3>A Tiempo</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique eius unde facilis recusandae quis adipisci repudiandae accusamus tenetur in, expedita nihil a quae fugit corrupti ad eligendi sit? Cum, quo.</p>
+        </div>
+    </div>
+ </section>
+
+<footer class="site-footer seccion">
+    <div class="contenedor contenedor-footer">
+        <nav class="navegacion">
+            <a href="nosotros.html">Nosotros</a>
+            <a href="anuncios.html">Anuncios</a>
+            <a href="blog.html">Blog</a> 
+            <a href="contactos.html">Contacto</a>
+        </nav>
+        <p class="copyright">Todos los derechos reservados 2019 &copy;</p>
+    </div>
+</footer>    
 </body>
 </html>
