--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a> 
-                <a href="contactos.html">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
         </div> <!--BARRA-->
-            <h1>Venta de Casas y Departamentos Exclusivos de Lujo</h1>
+            <h1>Venta de Casas y Departamentos <br> Exclusivos de Lujo</h1>
     </div> <!--CONTENEDOR-->
 </header>
 
@@ -79,7 +79,7 @@
                         </li>                  
                     </ul>
            
-                    <a href="#" class="boton boton-amarillo d-block ">Ver propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block ">Ver propiedad</a>
                 </div> 
             </div>
 
@@ -103,7 +103,7 @@
                                 <p>4</p>
                             </li>                  
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block ">Ver propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block ">Ver propiedad</a>
                 </div> 
             </div>
 
@@ -127,7 +127,7 @@
                                 <p>4</p>
                             </li>                  
                         </ul>
-                    <a href="#" class="boton boton-amarillo d-block">Ver propiedad</a>
+                    <a href="anuncio.html" class="boton boton-amarillo d-block">Ver propiedad</a>
                 </div>    
             </div>
         </div> 
@@ -154,7 +154,7 @@
                 <img src="img/blog1.jpg" alt="Entrada de blog">
             </div>
             <div class="texto-entrada">
-                <a href="#">
+                <a href="entrada.html">
                     <h4>Terraza en el techo de tu casa</h4>
                 </a>
                 <p>Escrito el: <span>25/05/2019</span> por:<span> Admin</span> </p>
@@ -167,8 +167,8 @@
                 <img src="img/blog2.jpg" alt="Entrada de blog">
             </div>
             <div class="texto-entrada">
-                <a href="#">
-                    <h4>Guía para la decoración de tu hogar</h4>
+                <a href="entrada.html">
+                    <h4>Construye una alberca en tu casa</h4>
                 </a>
                 <p>Escrito el: <span>25/05/2019</span> por:<span> Admin</span> </p>    
                 <p>Maximiza el espacio en tu hogar con esta guía, aprende a combinar muebles y colores para darle vida a tu espacio</p>
@@ -192,7 +192,7 @@
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a> 
-            <a href="contactos.html">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <p class="copyright">Todos los derechos reservados 2019 &copy;</p>
     </div>
