--- a/nosotros.html
+++ b/nosotros.html
@@ -20,7 +20,7 @@
                 <a href="nosotros.html">Nosotros</a>
                 <a href="anuncios.html">Anuncios</a>
                 <a href="blog.html">Blog</a> 
-                <a href="contactos.html">Contacto</a>
+                <a href="contacto.html">Contacto</a>
             </nav>
         </div> <!--BARRA-->
 
@@ -70,7 +70,7 @@
             <a href="nosotros.html">Nosotros</a>
             <a href="anuncios.html">Anuncios</a>
             <a href="blog.html">Blog</a> 
-            <a href="contactos.html">Contacto</a>
+            <a href="contacto.html">Contacto</a>
         </nav>
         <p class="copyright">Todos los derechos reservados 2019 &copy;</p>
     </div>
