--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="anuncio">
                 <img src="img/anuncio2.jpg" alt="Anuncio casa de lujo">
                 <div class="contenido-anuncio">
-                    <h3>Casa Terminados de Lujo</h3>
+                    <h3>Casa Acabados Lujo</h3>
                     <p>Csa con diseño moderno, así como tecnología inteligente y amueblada</p>
                     <p class="precio">$ 2,000,0000</p>
                     <ul class="iconos-caracteristicas">
@@ -147,7 +147,7 @@
 
 <div class="seccion-inferior contenedor seccion">
     <section class="blog">
-        <h3 class="centrar-texto fw-300">Nuestro bog</h3>
+        <h3 class="centrar-texto fw-300">Nuestro blog</h3>
 
         <article class="entrada-blog">
             <div class="imagen">
